syntax = "proto3";

import "google/protobuf/timestamp.proto";

import "object.proto";

package zitadel.v1.externalidp;

message ExternalIDPSearchRequest {
    zitadel.v1.SearchRequest meta_data = ;
    string user_id = ;
}

message ExternalIDPSearchResponse {
    zitadel.v1.SearchResponse meta_data = ;
    repeated ExternalIDP result = 4;
}

message RemoveExternalIDPRequest {
    string user_id = 1;
    string idp_config_id = 2;
    string external_user_id = 3;
}

message RemoveExternalIDPResponse {}

message ExternalIDP {
    string user_id = 1;
    string idp_config_id = 2;
    string external_user_id = 3;
    string idp_name = 4;
    string external_user_display_name = 5;
    google.protobuf.Timestamp creation_date = 6;
    google.protobuf.Timestamp change_date = 7;
}